# jeeadv2025-benchmark

./: .gitignore  README.md  benchmark.py  dspy_solver.py  jeeadv2025-bench.json  pyproject.toml
config/: config.yaml  config_gemini_2_5_flash.yaml  config_gemini_2_5_pro.yaml  config_gpt_4o_mini.yaml  config_gpt_o4_mini.yaml  config_grok_3_mini.yaml  config_r1.yaml
data/: all_problems.json  all_problems.jsonl  all_problems_validated.json  create_dataset_v4.py  jee2025-bench.jsonl  merge_jsons.py  validate_jsonl.py
data/outputs/: paper_1.json  paper_2.json  question_27.json
dataset_creation/: add_section_instructions.py
db/: benchmark_results.db
results/: jeeadv2025_benchmark_results_gemini_2_0_flash.json  jeeadv2025_benchmark_results_gemini_2_5_flash.json  jeeadv2025_benchmark_results_gemini_2_5_pro.json
